# symborg

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md
.github/ISSUE_TEMPLATE/: evaluation_task.md  prototype_task.md
assets/visuals/: README.md  prompts.md
docs/: architecture.md  assistive-communication-mode.md  brain-thought-model.md  cognitive-packet-engine-spec.md  collaboration-strategy.md  demo-recording-plan.md  demo-scenarios.md  device-family-roadmap.md  ethics.md  evaluation-protocol.md  feedback-output-layer.md  inner-voice-mode.md  input-channel-strategy.md  latency-and-interruption-model.md  mvp-v0-contextual-whisper.md  neural-write-research-track.md  one-page-brief.md  output-router-visuals.md  portfolio-case-study.md  product-roadmap.md  research-roadmap.md  signal-strategy.md  social-launch-kit.md  symborg-output-roadmap.md  where-symborg-intervenes.md  whitepaper.md
prototypes/contextual-whisper-demo/: README.md  pyproject.toml
prototypes/contextual-whisper-demo/evaluation/: fixtures.jsonl
prototypes/contextual-whisper-demo/examples/: clinic_assistive_context.txt  dickens_context.txt  sample_output.json  startup_meeting_context.txt
prototypes/contextual-whisper-demo/src/symborg/: context.py  delivery_gate.py  evaluate.py  heuristic_engine.py  packet.py  quality.py
prototypes/contextual-whisper-demo/tests/: test_quality.py
prototypes/output-router-demo/: README.md  pyproject.toml
prototypes/output-router-demo/examples/: packets.json
prototypes/symborg-live-demo/: README.md  server.py
references/: sources.md
(+7 files in other folders)
